# nautilus-python

./: config.h.meson  meson.build  meson_options.txt
src/: meson.build  nautilus-python-object.c  nautilus-python.c
